--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,14 @@
-<header class="masthead">
-  <h3 class="masthead-title">
-    <a href="{{ site.github.url }}/">{{ site.title }}</a>
-    <small class="masthead-subtitle">{{ site.description }}</small>
-    {% include menu.html %}
-  </h3>
-</header>
+<nav class='thm'>
+  <a href='https://tryhackme.com'>
+    <img width="135" src="/assets/img/logo.png" alt="TryHackMe" class="logo">
+  </a>
+  <div class="container">
+    <header class="masthead">
+      <h3 class="masthead-title">
+        <a href="{{ site.github.url }}/">{{ site.title }}</a>
+        <small class="masthead-subtitle">{{ site.description }}</small>
+        {% include menu.html %}
+      </h3>
+    </header>
+  </div>
+</nav>
