--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,13 @@
 <head>
 
   <title>
-    {% if page.title == "Home" %}
-      {{ site.title }} | {{ site.description }}
-    {% else %}
-      {{ page.title }} | {{ site.title }}
-    {% endif %}
+    {{ page.title }}
   </title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
 
+  <link rel="icon" type="image/png" href="/assets/img/favicon.png"/>
   <link rel="stylesheet" href="{{ site.github.url || replace: 'http://', '//' }}/assets/css/main.css">
   <link rel="stylesheet" href="{{ site.github.url || replace: 'http://', '//' }}/assets/css/syntax.css">
   <!-- Use Atom -->
