--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
 
   <title>
-    {{ page.title }}
+    TryHackMe Blog | {{ page.title }}
   </title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
